<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.SubmissionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="23dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black"

                />

            <ImageView
                android:layout_width="358dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/back_button"
                android:layout_toEndOf="@+id/back_button"
                android:src="@drawable/submt_header" />



        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:layout_height="match_parent">


       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">
           <TextView
               android:gravity="center_horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/project_submission"
               android:textSize="23sp"
              android:fontFamily="sans-serif"
               android:textStyle="bold"
               android:textColor="#d18f39"
               />

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/under_line"/>
       </LinearLayout>

        <LinearLayout
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                android:layout_height="55dp">

                <EditText
                    android:inputType="text"
                    android:maxLines="1"
                   android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name_hint"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColorHint="#8a8a8a"
                    android:backgroundTint="#ffffff"/>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                app:cardCornerRadius="8dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:layout_height="55dp">

                <EditText
                    android:maxLines="1"
                    android:inputType="text"
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Last Name"
                    android:paddingLeft="10dp"
                    android:textColorHint="#8a8a8a"
                    android:backgroundTint="#ffffff"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="55dp"
                    app:cardCornerRadius="8dp">

                    <EditText
                        android:maxLines="1"
                        android:inputType="text|textEmailAddress"
                        android:id="@+id/emailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email_address_hint"
                        android:paddingLeft="10dp"
                        android:textColorHint="#8a8a8a"
                        android:backgroundTint="#ffffff" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="55dp"
                    app:cardCornerRadius="8dp">

                    <EditText
                        android:maxLines="1"
                        android:inputType="text"
                        android:id="@+id/githubLink"
                        android:hint="@string/project_on_github_link_hint"
                        android:textColorHint="#8a8a8a"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#ffffff" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_width="180dp"
                    android:text="@string/submit_form"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_with_gradient"
                    android:layout_height="50dp"/>
            </LinearLayout>




        </ScrollView>




    </LinearLayout>



</LinearLayout>